--- a/secciones/inicio/inicio.html
+++ b/secciones/inicio/inicio.html
@@ -1,24 +1,23 @@
-<!-- @format -->
-
-<div class="contenedor__flex__columna__evenly margen__arriba__grande" id_class="inicio">
-  <link rel="stylesheet" href="../../estilos/general.css" />
-  <link rel="stylesheet" href="../../estilos/estilo.css" />
-
-  <div class="titulo brillante encabezado__titulo pulso margen__arriba__grande HOLOgrama">
-    <h1><span>C</span>arlos<span>M</span>ario<span>R</span>ivera.com</h1>
+<link rel="stylesheet" href="../../estilos/estilo.css" />
+<section class="contenedor__flex__columna__evenly" id="inicio">
+  <div class="nombre inicio__titulo">
+    <h1 class="parte1">
+      <span>C</span>arlos<span>M</span>ario<span class="parte2">R</span
+      >ivera.com
+    </h1>
   </div>
-  <div class="texto combined-effects">
-    <h2><span>A</span>nálisis de Datos Avanzados</h2>
-    <h3><span>D</span>esarrollador de Software</h3>
+
+  <div class="texto">
+    <h4><span>A</span>nálisis de <span>D</span>atos <span>A</span>vanzados</h4>
+    <h4><span>D</span>esarrollador de <span>S</span>oftware</h4>
   </div>
   <div>
-    <a href="../../html/curriculum/curriculum.html" class="link btn btn-outline">Mi Curriculum ! </a>
-  </div>
-  <div class="texto">
-    <p><span>A</span>pasionado por la <span>T</span>ecnología</p>
+    <a href="../../html/curriculum/curriculum.html" class="botonLink holograma"
+      >Mi Curriculum !
+    </a>
   </div>
 
-  <div class="final">
-    <h2 class="subtitulo"><span>I</span>nicio</h2>
+  <div class="texto__animado__zoom">
+    <span>A</span>pasionado por la <span>T</span>ecnología>
   </div>
-</div>
+</section>
