--- a/index.html
+++ b/index.html
@@ -1,140 +1,302 @@
-<!-- @format -->
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carlos Mario Rivera - Desarrollador de Software y Arquitecto de Soluciones</title>
+    <title>
+      Carlos Mario Rivera - Desarrollador de Software y Arquitecto de Soluciones
+    </title>
+
     <!-- Meta Descriptions -->
     <meta
       name="description"
       content="Carlos Mario Rivera, desarrollador de software con más de 12 años de experiencia. Especializado en la creación de aplicaciones robustas y escalables, ingeniería de datos y arquitectura de soluciones en la nube."
     />
+
     <!-- Keywords -->
     <meta
       name="keywords"
       content="Carlos Mario Rivera, desarrollador de software, ingeniero de datos, arquitecto de soluciones, aplicaciones robustas, escalables, infraestructuras en la nube, ISO 27001, tecnologías web, HTML, CSS, JavaScript, React, Angular, AWS, QuickSight, EC2, Athena, S3, Glue"
     />
+
     <!-- Author -->
     <meta name="author" content="Carlos Mario Rivera" />
+
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Carlos Mario Rivera - Desarrollador de Software y Arquitecto de Soluciones" />
+    <meta
+      property="og:title"
+      content="Carlos Mario Rivera - Desarrollador de Software y Arquitecto de Soluciones"
+    />
     <meta
       property="og:description"
       content="Carlos Mario Rivera, desarrollador de software con más de 12 años de experiencia. Especializado en la creación de aplicaciones robustas y escalables, ingeniería de datos y arquitectura de soluciones en la nube."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://carlosmariorivera.com" />
-    <meta property="og:image" content="https://carlosmariorivera.com/images/favicon/logo.jpg" />
-    <!-- github Card Meta Tags -->
-    <meta name="github:card" content="summary_large_image" />
-    <meta name="github:title" content="Carlos Mario Rivera - Desarrollador de Software y Arquitecto de Soluciones" />
     <meta
-      name="github:description"
-      content="Carlos Mario Rivera, desarrollador de software con más de 12 años de experiencia. Especializado en la creación de aplicaciones robustas y escalables, ingeniería de datos y arquitectura de soluciones en la nube."
+      property="og:image"
+      content="https://carlosmariorivera.com/images/favicon/logo.jpg"
     />
-    <meta name="github:image" content="https://carlosmariorivera.com/images/favicon/github.svg" />
+
     <!-- Canonical Link -->
     <link rel="canonical" href="https://carlosmariorivera.com" />
 
     <!-- Favicon -->
-    <link rel="icon" href="https://carlosmariorivera.com/images/favicon/favicon.ico" type="image/x-icon" />
-
-    <!-- Favicon -->
-
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon32.png" />
-    <link rel="icon" type="image/png" sizes="64x64" href="images/favicon/favicon64.png" />
-
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-
     <link
-      href="https://fonts.googleapis.com/css2?family=Playwrite+US+Trad&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
+      rel="icon"
+      href="https://carlosmariorivera.com/images/favicon/favicon.ico"
+      type="image/x-icon"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="images/favicon/favicon16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/favicon/favicon32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="64x64"
+      href="images/favicon/favicon64.png"
+    />
 
+    <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <style>
+      /* Estilos base */
 
+      .content {
+        flex-grow: 1;
+        padding: 2rem;
+      }
+
+      .fixed-text {
+        position: fixed;
+        top: 90%;
+        right: 2rem;
+        transform: translateY(-50%);
+        font-size: 0.5rem;
+        background-color: rgba(0, 255, 255, 0.7);
+
+        padding: 0.5rem;
+        border-radius: 8px;
+        width: 180px;
+        text-align: center;
+        overflow: hidden;
+      }
+
+      .animated-text {
+        display: inline-block;
+        opacity: 0;
+        transform: translateY(-100%);
+        animation: dropIn 1.2s ease forwards;
+        animation-delay: var(--delay);
+      }
+
+      @keyframes dropIn {
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+    </style>
+    <!-- Estilos -->
     <link rel="stylesheet" href="./estilos/estilo.css" />
   </head>
   <body>
     <header>
-      <nav class="navbar pulso">
+      <nav class="navbar">
         <div class="navbar__logo">
-          <a href="#">
-            <img src="images/logo.png" alt="Logo de Carlos Rivera" loading="lazy" />
-          </a>
+          <a href="#"
+            ><img
+              src="images/logo.png"
+              alt="Logo de Carlos Rivera"
+              loading="lazy"
+          /></a>
         </div>
 
-        <div class="navbar__menu-icon">
-          <span class="navbar__menu-icon-bar"></span>
-          <span class="navbar__menu-icon-bar"></span>
-          <span class="navbar__menu-icon-bar"></span>
+        <!-- Ícono del menú hamburguesa -->
+        <div class="navbar__menu-icon" id="menuToggle">
+          <i class="material-icons" style="font-size: 48px">menu</i>
         </div>
 
         <ul class="navbar__menu">
           <li class="navbar__menu-item">
-            <a href="#sobre_mi" class="navbar__link"> <span class="navbar__link-highlight">S</span>obre mí </a>
+            <a href="#sobre_mi" class="navbar__link"
+              ><span class="navbar__link-highlight">S</span>obre mí</a
+            >
           </li>
           <li class="navbar__menu-item">
-            <a href="#tecnologias" class="navbar__link"> <span class="navbar__link-highlight">T</span>ecnologías </a>
+            <a href="#tecnologias" class="navbar__link"
+              ><span class="navbar__link-highlight">T</span>ecnologías</a
+            >
           </li>
           <li class="navbar__menu-item">
-            <a href="#habilidades" class="navbar__link"> <span class="navbar__link-highlight">H</span>abilidades </a>
+            <a href="#habilidades" class="navbar__link"
+              ><span class="navbar__link-highlight">H</span>abilidades</a
+            >
           </li>
           <li class="navbar__menu-item">
-            <a href="#proyectos" class="navbar__link"> <span class="navbar__link">P</span>royectos </a>
+            <a href="#proyectos" class="navbar__link"
+              ><span class="navbar__link">P</span>royectos</a
+            >
           </li>
           <li class="navbar__menu-item navbar__menu-item--highlight">
-            <a href="#business-intelligence" class="navbar__link"> <span class="navbar__link">B</span>I_ </a>
+            <a href="#bi" class="navbar__link"
+              ><span class="navbar__link">B</span>I_</a
+            >
           </li>
           <li class="navbar__menu-item">
-            <a href="#contacto" class="navbar__link"> <span class="navbar__link-highlight">C</span>ontacto </a>
+            <a href="#contacto" class="navbar__link"
+              ><span class="navbar__link-highlight">C</span>ontacto</a
+            >
           </li>
         </ul>
       </nav>
     </header>
-
     <main>
-      <div id="iframe__wrapper">
-        <iframe src="./secciones/inicio/inicio.html" class="" title="inicio" frameborder="0" id="inicio" allowfullscreen> </iframe>
-      </div>
-      <div id="iframe__wrapper">
-        <iframe src="./secciones/sobre_mi/sobre_mi.html" class="" title="sobre_mi" frameborder="0" id="sobre_mi" allowfullscreen> </iframe>
-      </div>
-      <div id="iframe__wrapper">
-        <iframe src="./secciones/tecnologias/tecnologias.html" id="tecnologias" class="slide-in-left" allowfullscreen title="tecnologias" frameborder="0"> </iframe>
-      </div>
-      <div id="iframe__wrapper">
-        <iframe src="secciones/habilidades/habilidades.html" allowfullscreen id="habilidades" title="habilidades" frameborder="0"></iframe>
-      </div>
-      <div id="iframe__wrapper">
-        <iframe id="proyectos " src="secciones/proyectos/proyectos.html" class="slide-in-left" allowfullscreen title="proyectos" frameborder="0"></iframe>
-      </div>
-      <div id="iframe__wrapper">
-        <iframe id="business-intelligence " src="secciones/bi/bi.html" title="bi" frameborder="0" class="bi" allowfullscreen>
-          <div class="final">
-            <h2 class="subtitulo"><span>B</span>usiness <span>I</span>ntelligence</h2>
-          </div>
-        </iframe>
-      </div>
-      <div id="iframe__wrapper">
-        <iframe allowfullscreen src="secciones/contacto/contacto.html" id="contacto" class="slide-in-left" title="contacto" frameborder="0"></iframe>
-      </div>
+      <!-- Contenido -->
+
+      <iframe
+        src="./secciones/inicio/inicio.html"
+        scrolling="no"
+        title="inicio"
+        class="texto__final__animado"
+        frameborder="0"
+        id="inicio"
+        allowfullscreen
+      ></iframe>
+
+      <iframe
+        src="./secciones/sobre_mi/sobre_mi.html"
+        scrolling="no"
+        class="texto__final__animado doble__pantalla"
+        title="sobre_mi"
+        frameborder="0"
+        id="sobre_mi"
+        allowfullscreen
+      ></iframe>
+
+      <iframe
+        src="./secciones/tecnologias/tecnologias.html"
+        scrolling="no"
+        class="texto__final__animado doble__pantalla"
+        allowfullscreen
+        title="tecnologias"
+        1
+        id="tecnologias"
+        frameborder="0"
+      ></iframe>
+
+      <iframe
+        src="secciones/habilidades/habilidades.html"
+        scrolling="no"
+        class="texto__final__animado"
+        allowfullscreen
+        id="habilidades"
+        title="habilidades"
+        frameborder="0"
+      ></iframe>
+      <iframe
+        src="secciones/proyectos/proyectos.html"
+        scrolling="no"
+        class="texto__final__animado triple__pantalla"
+        allowfullscreen
+        id="proyectos"
+        title="proyectos"
+        frameborder="0"
+      ></iframe>
+      <iframe
+        src="secciones/bi/bi.html"
+        id="bi"
+        title="bi"
+        frameborder="0"
+        class="bi triple__pantalla"
+        allowfullscreen
+      ></iframe>
+      <iframe
+        allowfullscreen
+        src="secciones/contacto/contacto.html"
+        scrolling="no"
+        id="contacto"
+        class="texto__final__animado"
+        title="contacto"
+        frameborder="0"
+      ></iframe>
     </main>
+    <div class="fixed-text" id="fixedText">
+      <span class="animated-text">I</span>
+      <span class="animated-text">n</span>
+      <span class="animated-text">i</span>
+      <span class="animated-text">c</span>
+      <span class="animated-text">i</span>
+      <span class="animated-text">o</span>
+    </div>
+    <!-- Scripts -->
 
+    <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
     <script>
-      const miSonido = new Audio("./assets/music/dbz.wav");
+      // Selecciona el ícono del menú y el menú
+      const menuToggle = document.getElementById("menuToggle");
+      const menu = document.querySelector(".navbar__menu"); // Correctly select the menu
 
-      document.querySelector(".sonido-hover").addEventListener("mouseover", () => {
-        miSonido.play();
+      // Añade un evento click para mostrar u ocultar el menú
+      menuToggle.addEventListener("click", () => {
+        menu.classList.toggle("show");
       });
     </script>
-    <script src="./scripts/index.js"></script>
+
+    <script>
+      // Función para cambiar el texto fijo con animación
+      const fixedText = document.getElementById("fixedText");
+      const iframes = document.querySelectorAll("iframe");
+
+      function createAnimatedText(text) {
+        fixedText.innerHTML = "";
+        text.split("").forEach((char, index) => {
+          const span = document.createElement("span");
+          span.textContent = char;
+          span.classList.add("animated-text");
+          span.style.setProperty("--delay", `${index * 0.1}s`);
+          fixedText.appendChild(span);
+        });
+      }
+
+      window.addEventListener("scroll", () => {
+        let currentIframe = "";
+
+        iframes.forEach((iframe) => {
+          const iframeTop = iframe.getBoundingClientRect().top;
+          const windowHeight = window.innerHeight;
+
+          // Verifica si el iframe está en el viewport
+          if (iframeTop >= 0 && iframeTop < windowHeight) {
+            currentIframe = iframe.getAttribute("title");
+          }
+        });
+
+        if (currentIframe) {
+          createAnimatedText(
+            currentIframe.charAt(0).toUpperCase() + currentIframe.slice(1)
+          );
+        }
+      });
+    </script>
   </body>
 </html>
