--- a/secciones/proyectos/proyectos.html
+++ b/secciones/proyectos/proyectos.html
@@ -2,66 +2,175 @@
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Proyectos</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Proyectos</title>
+    <link rel="stylesheet" href="../../estilos/estilo.css" />
+    <link rel="stylesheet" href="./proyectos.css" />
+  </head>
+  <body>
+    <h2>
+      <strong class="subtitulo"> <span>P</span>royectos</strong>
+    </h2>
+    <br />
+    <strong
+      ><span>L</span>ogros <span>D</span>estacados en
+      <span>P</span>royectos</strong
+    >
 
-		<link rel="stylesheet" href="../../estilos/estilo.css" />
-		<link rel="stylesheet" href="../../estilos/general.css" />
-		<link rel="stylesheet" href="./proyectos.css" />
-	</head>
-	<body>
-		<div class="contenedor__proyectos pulso">
-			<div class="proyectos__grid">
-				<div class="proyecto texto">
-					<h2 class="proyecto__title">Facturación Electrónica</h2>
-					<img src="../../images/proyectos/fe.jpeg" alt="Proceso de Facturación Electrónica" class="proyecto__img" loading="lazy" />
-					<div class="proyecto__content">
-						<div id="description1" class="proyecto__description collapsed">
-							<p>
-								Implementé sistemas de facturación electrónica global que unifica los estándares para la emisión, recepción y procesamiento de
-								facturas electrónicas. Este proyecto mejora la eficiencia y la transparencia en las transacciones comerciales.
-							</p>
-							<p><strong>Tecnologías:</strong> HTML, CSS, JavaScript</p>
-							<ul>
-								<li>Desarrollé interfaces de usuario intuitivas y responsivas.</li>
-								<li>Integré sistemas de validación y seguridad de datos.</li>
-							</ul>
-						</div>
-						<div class="toggle-button" onclick="toggleDescription('description1')">Mostrar más</div>
-					</div>
-				</div>
+    <!-- KPIs y Logros Destacados -->
+    <div class="footer__kpis">
+      <div class="kpi">
+        <div class="kpi__icon">
+          <i class="material-icons gradiente__frio" style="font-size: 48px"
+            >badge</i
+          >
+        </div>
+        <div class="kpi__data holograma">
+          <h3 class="kpi__value">95%</h3>
+          <p class="kpi__description">
+            Reducción en el tamaño de documentos electrónicos
+          </p>
+        </div>
+      </div>
+      <div class="kpi">
+        <div class="kpi__icon gradiente__frio">
+          <i class="material-icons" style="font-size: 48px"
+            >supervisor_account</i
+          >
+        </div>
+        <div class="kpi__data holograma">
+          <h3 class="kpi__value">ISO 27001</h3>
+          <p class="kpi__description">Certificación en normas de seguridad</p>
+        </div>
+      </div>
+      <div class="kpi">
+        <div class="kpi__icon gradiente__frio">
+          <i class="material-icons" style="font-size: 48px">timer_10</i>
+        </div>
+        <div class="kpi__data holograma">
+          <h3 class="kpi__value">Top 10</h3>
+          <p class="kpi__description">
+            Proveedores tecnológicos con más documentos emitidos
+          </p>
+        </div>
+      </div>
+      <div class="kpi">
+        <div class="kpi__icon gradiente__frio">
+          <i class="material-icons" style="font-size: 48px">construction</i>
+        </div>
+        <div class="kpi__data holograma">
+          <h3 class="kpi__value">Optimización</h3>
+          <p class="kpi__description">
+            Mejora en emisión de documentos electrónicos
+          </p>
+        </div>
+      </div>
+    </div>
 
-				<div class="proyecto">
-					<h2 class="proyecto__title">Precios Históricos del Dólar en Colombia</h2>
-					<img src="../../images/proyectos/dolar.jpeg" alt="Análisis de Precios del Dólar" class="proyecto__img" loading="lazy" />
-					<div class="proyecto__content">
-						<div id="description2" class="proyecto__description collapsed">
-							<p>
-								Desarrollé un sistema para analizar y predecir los precios históricos del dólar en Colombia utilizando inteligencia artificial y
-								herramientas de Business Intelligence. Este proyecto proporciona insights valiosos para la toma de decisiones financieras.
-							</p>
-							<p><strong>Tecnologías:</strong> Python, AWS QuickSight, RDS, IA, API</p>
-							<ul>
-								<li>Implementación de un dashboard interactivo en QuickSight.</li>
-								<li>Uso de modelos de IA para predicciones precisas.</li>
-							</ul>
-							<a href="#bi" class="link btn btn-outline" target="_blank" rel="noopener">Ver mucho más</a>
-						</div>
-						<div class="toggle-button" onclick="toggleDescription('description2')">Mostrar más</div>
-					</div>
-				</div>
-			</div>
-		</div>
+    <div class="contenedor__proyectos">
+      <div class="proyectos__grid">
+        <div class="proyecto">
+          <h2 class="proyecto__title subtitulo">
+            <span>F</span>acturación <span>E</span>lectrónica
+          </h2>
+          <img
+            src="../../images/proyectos/fe.jpeg"
+            alt="Proceso de Facturación Electrónica"
+            class="proyecto__img"
+            loading="lazy"
+          />
+          <div class="proyecto__content">
+            <div id="description1" class="proyecto__description collapsed">
+              <p>
+                <span>I</span>mplementé sistemas de facturación electrónica para
+                la emisión, recepción y procesamiento de facturas electrónicas.
+                Este proyecto mejora la eficiencia y la transparencia en las
+                transacciones comerciales.
+              </p>
 
-		<script>
-			function toggleDescription(id) {
-				const description = document.getElementById(id);
-				const toggleButton = description.nextElementSibling;
-				description.classList.toggle("collapsed");
-				toggleButton.textContent = description.classList.contains("collapsed") ? "Mostrar más" : "Mostrar menos";
-			}
-		</script>
-	</body>
+              <ul>
+                <li>
+                  <span>D</span>esarrollé interfaces de usuario intuitivas y
+                  responsivas.
+                </li>
+                <li>
+                  <span>I</span>ntegré sistemas de validación y seguridad de
+                  datos.
+                </li>
+                <p>
+                  <strong> <span>T</span>ecnologías:</strong> HTML, CSS,
+                  JavaScript
+                </p>
+              </ul>
+            </div>
+            <div
+              class="toggle-button"
+              onclick="toggleDescription('description1')"
+            >
+              Mostrar más
+            </div>
+          </div>
+        </div>
+
+        <div class="proyecto">
+          <h2 class="proyecto__title subtitulo">
+            <span>P</span>recios <span>H</span>istóricos del <span>D</span>ólar
+          </h2>
+          <img
+            src="../../images/proyectos/dolar.jpeg"
+            alt="Análisis de Precios del Dólar"
+            class="proyecto__img"
+            loading="lazy"
+          />
+          <div class="proyecto__content">
+            <div id="description2" class="proyecto__description collapsed">
+              <p>
+                <span>D</span>esarrollé un sistema para analizar y predecir los
+                precios históricos del dólar en Colombia utilizando inteligencia
+                artificial y herramientas de Business Intelligence.
+              </p>
+
+              <ul>
+                <li><span>I</span>mplementación de dashboard interactivos.</li>
+
+                <li>
+                  <span>U</span>so de modelos de IA para predicciones precisas.
+                </li>
+                <p>
+                  <strong> <span>T</span>ecnologías:</strong>
+                  <span class="icono__javascript"></span>, AWS QuickSight,<span
+                    class="icono__python"
+                  >
+                  </span
+                  >, IA, API
+                  <a href="#bi" class="link" target="_blank" rel="noopener"
+                    >Ver más</a
+                  >
+                </p>
+              </ul>
+            </div>
+            <div
+              class="toggle-button"
+              onclick="toggleDescription('description2')"
+            >
+              Mostrar más
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      function toggleDescription(id) {
+        const description = document.getElementById(id);
+        const toggleButton = description.nextElementSibling;
+        description.classList.toggle("collapsed");
+        toggleButton.textContent = description.classList.contains("collapsed")
+          ? "Mostrar más"
+          : "Mostrar menos";
+      }
+    </script>
+  </body>
 </html>
