--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <iframe
         src="./secciones/tecnologias/tecnologias.html"
         scrolling="no"
-        class="texto__final__animado doble__pantalla"
+        class="doble__pantalla"
         allowfullscreen
         title="tecnologias"
         1
@@ -215,7 +215,7 @@
       <iframe
         src="secciones/proyectos/proyectos.html"
         scrolling="no"
-        class="texto__final__animado triple__pantalla"
+        class="triple__pantalla"
         allowfullscreen
         id="proyectos"
         title="proyectos"
@@ -234,7 +234,7 @@
         src="secciones/contacto/contacto.html"
         scrolling="no"
         id="contacto"
-        class="texto__final__animado"
+        class="doble__pantalla"
         title="contacto"
         frameborder="0"
       ></iframe>
