--- a/secciones/bi/bi.html
+++ b/secciones/bi/bi.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Business Intelligence</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css"
     />
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
 
     <link rel="stylesheet" href="bi_estilo.css" />
     <link rel="stylesheet" href="../../estilos/estilo.css" />
@@ -49,25 +46,25 @@
                 <tr>
                   <td><strong>Valor Máximo:</strong></td>
                   <td>
-                    <span id="valor-maximo" class="valor-maximo"></span> 
+                    <span id="valor-maximo" class="valor-maximo"></span>
                   </td>
                 </tr>
                 <tr>
-                    <td><strong>Fecha Máxima:</strong></td>
-                    <td>
-                      <span id="fecha-maxima" </span> 
-                    </td>
-                  </tr>
-        
+                  <td><strong>Fecha Máxima:</strong></td>
+                  <td>
+                    <span id="fecha-maxima"></span>
+                  </td>
+                </tr>
+
                 <tr>
                   <td><strong>Valor Promedio:</strong></td>
-                  <td><span id="avg-value"></span></td>
+                  <td><span id="valor-promedio"></span></td>
                 </tr>
                 <tr>
                   <td></td>
                   <td></td>
                 </tr>
-         
+
                 <tr>
                   <td><strong>Valor Calculado via API:</strong></td>
                   <td><span id="api-value"></span></td>
