--- a/secciones/proyectos/proyectos copy.html
+++ b/secciones/proyectos/proyectos copy.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h2>
-      <strong class="subtitulo"><span>P</span>royectos</strong>
+      <strong class="subtitulo"> <span>P</span>royectos</strong>
     </h2>
     <br />
     <strong
@@ -20,13 +20,13 @@
     >
 
     <!-- KPIs y Logros Destacados -->
-    <!-- KPIs y Logros Destacados -->
-    <div class="contenedor__flex__proyectos">
-      <div class="tarjeta__kpi__icon gradiente__frio">
-        <i class="material-icons gradiente__frio" style="font-size: 48px"
-          >badge</i
-        >
-
+    <div class="contenedor__flex">
+      <div class="tarjeta__kpi">
+        <div class="tarjeta__kpi__icon">
+          <i class="material-icons gradiente__frio" style="font-size: 48px"
+            >badge</i
+          >
+        </div>
         <div class="tarjeta__kpi__data holograma">
           <h3 class="tarjeta_kpi__value">95%</h3>
           <p class="tarjeta__tarjeta__kpi">
@@ -34,22 +34,20 @@
           </p>
         </div>
       </div>
-
-      <div class="tarjeta__kpi_proyecos">
+      <div class="tarjeta__kpi">
         <div class="tarjeta__kpi__icon gradiente__frio">
           <i class="material-icons" style="font-size: 48px"
             >supervisor_account</i
           >
         </div>
         <div class="tarjeta__kpi__data holograma">
-          <h3 class="tarjeta_kpi__value">ISO 27001</h3>
+          <h3 class="tarjeta__kpi__value">ISO 27001</h3>
           <p class="tarjeta__tarjeta__kpi">
             Certificación en normas de seguridad
           </p>
         </div>
       </div>
-
-      <div class="tarjeta__kpi_proyecos">
+      <div class="tarjeta__kpi">
         <div class="tarjeta__kpi__icon gradiente__frio">
           <i class="material-icons" style="font-size: 48px">timer_10</i>
         </div>
@@ -60,8 +58,7 @@
           </p>
         </div>
       </div>
-
-      <div class="tarjeta__kpi_proyecos">
+      <div class="tarjeta__kpi">
         <div class="tarjeta__kpi__icon gradiente__frio">
           <i class="material-icons" style="font-size: 48px">construction</i>
         </div>
@@ -69,18 +66,6 @@
           <h3 class="tarjeta_kpi__value">Optimización</h3>
           <p class="tarjeta__tarjeta__kpi">
             Mejora en emisión de documentos electrónicos
-          </p>
-        </div>
-      </div>
-
-      <div class="tarjeta__kpi_proyecos">
-        <div class="tarjeta__kpi__icon gradiente__frio">
-          <i class="material-icons" style="font-size: 48px">monetization_on</i>
-        </div>
-        <div class="tarjeta__kpi__data holograma">
-          <h3 class="tarjeta_kpi__value">Análisis de Precios del Dólar</h3>
-          <p class="tarjeta__tarjeta__kpi">
-            Desarrollo de un sistema para predecir precios históricos del dólar
           </p>
         </div>
       </div>
@@ -106,6 +91,7 @@
                 Este proyecto mejora la eficiencia y la transparencia en las
                 transacciones comerciales.
               </p>
+
               <ul>
                 <li>
                   <span>D</span>esarrollé interfaces de usuario intuitivas y
@@ -147,15 +133,20 @@
                 precios históricos del dólar en Colombia utilizando inteligencia
                 artificial y herramientas de Business Intelligence.
               </p>
+
               <ul>
-                <li><span>I</span>mplementación de dashboards interactivos.</li>
+                <li><span>I</span>mplementación de dashboard interactivos.</li>
+
                 <li>
                   <span>U</span>so de modelos de IA para predicciones precisas.
                 </li>
                 <p>
                   <strong> <span>T</span>ecnologías:</strong>
-                  <span class="icono__javascript"></span>, AWS QuickSight,
-                  <span class="icono__python"></span>, IA, API
+                  <span class="icono__javascript"></span>, AWS QuickSight,<span
+                    class="icono__python"
+                  >
+                  </span
+                  >, IA, API
                   <a href="#bi" class="link" target="_blank" rel="noopener"
                     >Ver más</a
                   >
