--- a/secciones/sobre_mi/sobre_mi.html
+++ b/secciones/sobre_mi/sobre_mi.html
@@ -1,155 +1,129 @@
-<!-- @format -->
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sobre_mi</title>
+<link rel="stylesheet" href="../../estilos/estilo.css" />
 
-    <link rel="stylesheet" href="../../estilos/estilo.css" />
+<link rel="stylesheet" href="sobre_mi.css" />
+<h2>
+  <strong class="subtitulo"> <span>S</span>obre <span>M</span>i</strong>
+</h2>
+<section id="movimiento_skills_sobre_mi" class="coontenedor__flex">
+  <!-- Información Personal y Texto -->
+  <div class="sobre__mi__columna pulso">
+    <h2 class="subtitulo">
+      <span>S</span>oy <span>C</span>arlos <span>M</span>ario
+      <span>R</span>ivera<span>&nbsp;&frasl;&gt;</span>
+    </h2>
+    <p>
+      <strong class="texto__3d">Desarrollador de software</strong>
+      Con más de 12 años de experiencia, apasionado por la creación de
+      aplicaciones robustas y escalables, he trabajado en proyectos desde la
+      etapa de diseño hasta la implementación de soluciones.
+    </p>
+    <p>
+      <strong class="texto__3d">Como Ingeniero de datos,</strong>
+      mi objetivo es crear soluciones eficientes que mejoren la experiencia del
+      usuario.
+    </p>
+    <p class="texto_justificado">
+      <strong class="texto__3d">Un Arquitecto de soluciones, </strong>
+      con experiencia en diseño, implementación y optimización de
+      infraestructuras en la nube.
+    </p>
+    <p class="texto__3d"><br />Auditor interno ISO 27001.</p>
+    <br />
+  </div>
 
-    <link rel="stylesheet" href="sobre_mi.css" />
-  </head>
-  <body>
-    <div id="movimiento_skills_sobre_mi" class="movimiento_skills_sobre_mi">
-      <div class="about-box">
-        <!-- Información Personal y Texto -->
-        <div class="about-column pulso">
-          <div class="texto">
-            <h2 class="subtitulo">
-              <span>S</span>oy <span>C</span>arlos <span>M</span>ario
-              <span>R</span>ivera<span>&nbsp;&frasl;&gt;</span>
-            </h2>
-            <p class="texto_justificado">
-              <br />
-              <strong class="pulso">Desarrollador de software</strong>
-              Con más de 12 años de experiencia, apasionado por la creación de
-              aplicaciones robustas y escalables, he trabajado en proyectos
-              desde la etapa de diseño hasta la implementación de soluciones.
-            </p>
-            <p class="texto_justificado">
-              <br />
-              <strong class="pulso">Como Ingeniero de datos,</strong>
-              mi objetivo es crear soluciones eficientes que mejoren la
-              experiencia del usuario.
-            </p>
-            <p class="texto_justificado">
-              <br />
-              <strong class="pulso">Un Arquitecto de soluciones, </strong>
-              con experiencia en diseño, implementación y optimización de
-              infraestructuras en la nube.
-            </p>
-            <p class="texto_justificado holograma">
-              <br />Auditor interno ISO 27001.
-            </p>
-            <br /><br />
-          </div>
+  <!-- Habilidades y Animaciones -->
+  <div class="sobre__mi__movimiento_skills">
+    <!-- Contenedor de habilidades -->
+    <div id="movimiento_skills">
+      <div class="movimiento_skills-grid">
+        <!-- Cubo central y habilidades -->
+        <div class="skills-logo cambiarlogo"></div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/frontend/html.svg" alt="HTML" />
+          <div class="movimiento_skills-grid-skill-tooltip">HTML</div>
         </div>
-        <!-- Habilidades y Animaciones -->
-        <div class="about_column_skill contenedor__aumentotamano">
-          <!-- Contenedor de habilidades -->
-          <div id="movimiento_skills ">
-            <div class="movimiento_skills-grid">
-              <!-- Cubo central y habilidades -->
-              <div class="skills-logo"></div>
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/frontend/html.svg" alt="HTML" />
-                <div class="movimiento_skills-grid-skill-tooltip">HTML</div>
-              </div>
 
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/frontend/js.svg" alt="JavaScript" />
-                <div class="movimiento_skills-grid-skill-tooltip">
-                  JavaScript
-                </div>
-              </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/frontend/js.svg" alt="JavaScript" />
+          <div class="movimiento_skills-grid-skill-tooltip">JavaScript</div>
+        </div>
 
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/frontend/css.ico" alt="CSS" />
-                <div class="movimiento_skills-grid-skill-tooltip">CSS</div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/frontend/react.svg" alt="React" />
-                <div class="movimiento_skills-grid-skill-tooltip">React</div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/frontend/angular.svg" alt="Angular" />
-                <div class="movimiento_skills-grid-skill-tooltip">Angular</div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/aws/quicksight.webp" alt="QuickSight" />
-                <div class="movimiento_skills-grid-skill-tooltip">
-                  QuickSight
-                </div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/aws/ec2.webp" alt="EC2" />
-                <div class="movimiento_skills-grid-skill-tooltip">EC2</div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/aws/athena.webp" alt="Athena" />
-                <div class="movimiento_skills-grid-skill-tooltip">Athena</div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/aws/s3.webp" alt="S3" />
-                <div class="movimiento_skills-grid-skill-tooltip">S3</div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/aws/glue.webp" alt="Glue" />
-                <div class="movimiento_skills-grid-skill-tooltip">Glue</div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img
-                  src="../../images/backend/netcore.svg"
-                  alt="ASP.NET Core ( c#, vb)"
-                />
-                <div class="movimiento_skills-grid-skill-tooltip">netcore</div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/backend/python.svg" alt=" python" />
-                <div class="movimiento_skills-grid-skill-tooltip">python</div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/backend/java.svg" alt="java" />
-                <div class="movimiento_skills-grid-skill-tooltip">java</div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/Backend/api.svg" alt="Api" />
-                <div class="movimiento_skills-grid-skill-tooltip">Api</div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img
-                  src="../../images/backend/csharp_m.svg"
-                  alt=" logo de c# "
-                />
-                <p>c#</p>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img src=" ../../images/db/mysql.svg " alt=" mysql " />
-                <div class="movimiento_skills-grid-skill-tooltip">MySQL</div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/db/maria.svg" alt=" maria db " />
-                <div class="movimiento_skills-grid-skill-tooltip">maria db</div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img
-                  src=" ../../images/db/file_type_sql_icon_130152.svg "
-                  alt=" Sql server "
-                />
-                <div class="movimiento_skills-grid-skill-tooltip">
-                  Sql server
-                </div>
-              </div>
-              <div class="movimiento_skills-grid-skill">
-                <img src="../../images/aws/rds.webp" alt="RDS" />
-                <div class="movimiento_skills-grid-skill-tooltip">RDS</div>
-              </div>
-            </div>
-          </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/frontend/css.ico" alt="CSS" />
+          <div class="movimiento_skills-grid-skill-tooltip">CSS</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/frontend/react.svg" alt="React" />
+          <div class="movimiento_skills-grid-skill-tooltip">React</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/frontend/angular.svg" alt="Angular" />
+          <div class="movimiento_skills-grid-skill-tooltip">Angular</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/aws/quicksight.webp" alt="QuickSight" />
+          <div class="movimiento_skills-grid-skill-tooltip">QuickSight</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/aws/ec2.webp" alt="EC2" />
+          <div class="movimiento_skills-grid-skill-tooltip">EC2</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/aws/athena.webp" alt="Athena" />
+          <div class="movimiento_skills-grid-skill-tooltip">Athena</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/aws/s3.webp" alt="S3" />
+          <div class="movimiento_skills-grid-skill-tooltip">S3</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/aws/glue.webp" alt="Glue" />
+          <div class="movimiento_skills-grid-skill-tooltip">Glue</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img
+            src="../../images/backend/netcore.svg"
+            alt="ASP.NET Core ( c#, vb)"
+          />
+          <div class="movimiento_skills-grid-skill-tooltip">netcore</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/backend/python.svg" alt=" python" />
+          <div class="movimiento_skills-grid-skill-tooltip">python</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/backend/java.svg" alt="java" />
+          <div class="movimiento_skills-grid-skill-tooltip">java</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/Backend/api.svg" alt="Api" />
+          <div class="movimiento_skills-grid-skill-tooltip">Api</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/backend/csharp_m.svg" alt=" logo de c# " />
+          <p>c#</p>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src=" ../../images/db/mysql.svg " alt=" mysql " />
+          <div class="movimiento_skills-grid-skill-tooltip">MySQL</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/db/maria.svg" alt=" maria db " />
+          <div class="movimiento_skills-grid-skill-tooltip">maria db</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img
+            src=" ../../images/db/file_type_sql_icon_130152.svg "
+            alt=" Sql server "
+          />
+          <div class="movimiento_skills-grid-skill-tooltip">Sql server</div>
+        </div>
+        <div class="movimiento_skills-grid-skill">
+          <img src="../../images/aws/rds.webp" alt="RDS" />
+          <div class="movimiento_skills-grid-skill-tooltip">RDS</div>
         </div>
       </div>
     </div>
-    <script src="../../scripts/js/movimiento_skills.js"></script>
-  </body>
-</html>
+  </div>
+  <script src="../../scripts/js/movimiento_skills.js"></script>
+</section>
